--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile "com.facebook.fresco:fresco:${frescoVersion}"
+    compile "com.squareup.okhttp3:okhttp:${okhttp3Version}"
     testCompile 'junit:junit:4.12'
 }
